--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -9,7 +9,7 @@
     <string name="bonding_failed">Pairing fehlgeschlagen</string>
     <string name="connect_device_addr">(%1$s)</string>
     <string name="connect_device_error_name">Verbindung mit %1$s fehlgeschlagen.</string>
-    <string name="connect_device_name">Verbinde mit BLE Gerät %1$s...</string>
+    <string name="connect_device_name">Verbinde mit BLE Gerät %1$s…</string>
     <string name="connect_error_msg">%1$s</string>
     <string name="connected_with_device">Verbunden mit Gerät %1$s</string>
     <string name="connection_error">Verbindungsfehler</string>
@@ -21,6 +21,6 @@
     <string name="no_matching_device">Kein passendes Gerät gefunden</string>
     <string name="retry">Nochmal</string>
     <string name="scan_other">Anderes Gerät finden</string>
-    <string name="scanning">Suche...</string>
+    <string name="scanning">Suche…</string>
     <string name="service_unsupported">Dienst wird nicht unterstützt</string>
 </resources>
